--- a/source/scss/components/_pillar-tabs.scss
+++ b/source/scss/components/_pillar-tabs.scss
@@ -1,5 +1,6 @@
 .pillar-tabs-wrapper {
   @extend %component-footer;
+  padding-top: 20px;
   
   h3 {
     color: $color--oxford-blue;
